--- a/Projeto_Final/HTMLCSS/CSS/userarea.css
+++ b/Projeto_Final/HTMLCSS/CSS/userarea.css
@@ -57,6 +57,7 @@ hr.green-line {
     width: 300px;
 }
 
+
 .turmainfo-container {
     float: right;
     width: auto;
@@ -71,7 +72,6 @@ hr.green-line {
     padding-top: 18px;
     padding-left: 18px;
     padding-right: 18px;
-    display: ruby;
 }
 
 .turmainfo h1 {
@@ -86,6 +86,35 @@ hr.green-line {
     font-size: 15px;
     text-align: justify;
 }
+
+.fessorinfo-container {
+    float: right;
+    width: auto;
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.4);
+    -webkit-box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
+    -moz-box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
+    box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
+}
+
+.fessorinfo {
+    padding-top: 18px;
+    padding-left: 18px;
+    padding-right: 18px;
+}
+
+    .fessorinfo h1 {
+        color: black;
+        font-family: 'Bebas Neue';
+        text-decoration: none;
+    }
+
+    .fessorinfo p, .fessorinfo h3 {
+        color: black;
+        font-family: 'Abel';
+        font-size: 15px;
+        text-align: justify;
+    }
 
 input {
     background-color: #e6e6e6;
