--- a/Projeto_Final/HTMLCSS/Listagem/edit_listagem/edit_list_matricula.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/edit_listagem/edit_list_matricula.cshtml
@@ -3,6 +3,21 @@
     BancoDeDados.DBConnect();
     matricula mat = new matricula();
     mat.idmatricula = Request.Form["matid"];
+    Boolean logado = false;
+
+    HttpCookie cookie = Request.Cookies["UserLogin"];
+    HttpCookie cookiecpf = Request.Cookies["UserCPF"];
+
+    if (cookie != null)
+    {
+        logado = true;
+    }
+    else
+    {
+        <text>
+            <script>window.location.href = "/Index.cshtml";</script></text>
+    }
+
 
 }
 
@@ -23,85 +38,85 @@
     <title>CENAI</title>
 </head>
 <body div class="bg">
-<section>
-    <nav>
-        <!--SIDEBAR-->
-        <div class="sidenav" onclick="Dropdownbtn()">
-            <!--PAGINA INICIAL-->
-            <a href="~/HTMLCSS/Main/main.cshtml">
-                <span class="material-symbols-outlined">home</span>
-                Pagina Inicial
-            </a>
-            <!--MATRICULA-->
-            <button class="dropdown-btn">
-                <span class="material-symbols-outlined">person_add</span>
-                Matricula
-                <span class="material-symbols-outlined">expand_more</span>
-            </button>
-            <!--MATRICULA OPCOES-->
-            <div class="dropdown-container">
-                <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
-                <a class="active" href="~/HTMLCSS/Listagem/listagem_matriculas.cshtml">Alunos Matriculados</a>
+    <section>
+        <nav>
+            <!--SIDEBAR-->
+            <div class="sidenav" onclick="Dropdownbtn()">
+                <!--PAGINA INICIAL-->
+                <a href="~/HTMLCSS/Main/main.cshtml">
+                    <span class="material-symbols-outlined">home</span>
+                    Pagina Inicial
+                </a>
+                <!--MATRICULA-->
+                <button class="dropdown-btn">
+                    <span class="material-symbols-outlined">person_add</span>
+                    Matricula
+                    <span class="material-symbols-outlined">expand_more</span>
+                </button>
+                <!--MATRICULA OPCOES-->
+                <div class="dropdown-container">
+                    <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
+                    <a class="active" href="~/HTMLCSS/Listagem/listagem_matriculas.cshtml">Alunos Matriculados</a>
+                </div>
+                <!--REGISTRO-->
+                <button class="dropdown-btn">
+                    <span class="material-symbols-outlined">app_registration</span>
+                    Registro
+                    <span class="material-symbols-outlined">expand_more</span>
+                </button>
+                <!--REGISTRO OPCOES-->
+                <div class="dropdown-container">
+                    <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
+                    <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
+                    <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
+                </div>
+                <!--LISTAGEM-->
+                <button class="dropdown-btn">
+                    <span class="material-symbols-outlined">list_alt</span>
+                    Listagem
+                    <span class="material-symbols-outlined">expand_more</span>
+                </button>
+                <!--LISTAGEM OPCOES-->
+                <div class="dropdown-container">
+                    <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
+                    <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
+                    <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
+                    <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
+                </div>
+                <!--PESQUISA-->
+                <button class="dropdown-btn">
+                    <span class="material-symbols-outlined">search</span>
+                    Pesquisa
+                    <span class="material-symbols-outlined">expand_more</span>
+                </button>
+                <!--PESQUISA OPCOES-->
+                <div class="dropdown-container">
+                    <a href="#">Usuarios</a>
+                    <a href="#">Turmas</a>
+                    <a href="#">Salas</a>
+                </div>
+                <!--PROVAS-->
+                <a href="#">
+                    <span class="material-symbols-outlined">quiz</span>
+                    Provas
+                </a>
+                <!--AREA DO USUARIO-->
+                <a href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
+                    <span class="material-symbols-outlined">account_circle</span>
+                    Área do Usuario
+                </a>
+                <!--LOGOUT-->
+                <a class="logoff" onclick="LogOff()">
+                    <span class="material-symbols-outlined">logout</span>
+                    Fazer Logoff
+                </a>
             </div>
-            <!--REGISTRO-->
-            <button class="dropdown-btn">
-                <span class="material-symbols-outlined">app_registration</span>
-                Registro
-                <span class="material-symbols-outlined">expand_more</span>
-            </button>
-            <!--REGISTRO OPCOES-->
-            <div class="dropdown-container">
-                <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
-                <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
-                <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
-            </div>
-            <!--LISTAGEM-->
-            <button class="dropdown-btn">
-                <span class="material-symbols-outlined">list_alt</span>
-                Listagem
-                <span class="material-symbols-outlined">expand_more</span>
-            </button>
-            <!--LISTAGEM OPCOES-->
-            <div class="dropdown-container">
-                <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
-                <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
-                <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
-                <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
-            </div>
-            <!--PESQUISA-->
-            <button class="dropdown-btn">
-                <span class="material-symbols-outlined">search</span>
-                Pesquisa
-                <span class="material-symbols-outlined">expand_more</span>
-            </button>
-            <!--PESQUISA OPCOES-->
-            <div class="dropdown-container">
-                <a href="#">Usuarios</a>
-                <a href="#">Turmas</a>
-                <a href="#">Salas</a>
-            </div>
-            <!--PROVAS-->
-            <a href="#">
-                <span class="material-symbols-outlined">quiz</span>
-                Provas
-            </a>
-            <!--AREA DO USUARIO-->
-            <a href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
-                <span class="material-symbols-outlined">account_circle</span>
-                Área do Usuario
-            </a>
-            <!--LOGOUT-->
-            <a class="logoff" onclick="LogOff()">
-                <span class="material-symbols-outlined">logout</span>
-                Fazer Logoff
-            </a>
-        </div>
-    </nav>
+        </nav>
         <main>
             <div class="content">
                 <form method="post" action="~/HTMLCSS/Listagem/edit_listagem/editing_list_matricula.cshtml">
                     <div class="container">
-                        
+
                         <div class="registro">
                             <input type="hidden" name="matid" id="matid" value="@mat.idmatricula" />
                             <center>
