--- a/Projeto_Final/HTMLCSS/Listagem/listagem_matriculas.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_matriculas.cshtml
@@ -1,6 +1,21 @@
 ﻿@using Projeto_Final.CSHARP
 @{
     BancoDeDados.DBConnect();
+    Boolean logado = false;
+
+    HttpCookie cookie = Request.Cookies["UserLogin"];
+    HttpCookie cookiecpf = Request.Cookies["UserCPF"];
+
+    if (cookie != null)
+    {
+        logado = true;
+    }
+    else
+    {
+        <text>
+            <script>window.location.href = "/Index.cshtml";</script></text>
+    }
+
 }
 
 <!DOCTYPE html>
@@ -99,18 +114,18 @@
 
         <div class="content" id="content">
             <div class="lista" id="lista">
-                    <table>
-                        <tr>
-                            <th>MATRICULA</th>
-                            <th>ALUNO</th>
-                            <th>CPF</th>
-                            <th>TURMA</th>
-                            <th>CURSO</th>
-                            <th>OPÇÕES</th>
-                        </tr>
-                        @{List<matricula> lista = Funcoes.Listagem_Matricula();}
-                        @foreach (matricula matriculados in lista)
-                        {
+                <table>
+                    <tr>
+                        <th>MATRICULA</th>
+                        <th>ALUNO</th>
+                        <th>CPF</th>
+                        <th>TURMA</th>
+                        <th>CURSO</th>
+                        <th>OPÇÕES</th>
+                    </tr>
+                    @{List<matricula> lista = Funcoes.Listagem_Matricula();}
+                    @foreach (matricula matriculados in lista)
+                    {
                         <tr>
                             <td>@matriculados.idmatricula</td>
                             <td>@matriculados.idaluno</td>
@@ -136,13 +151,13 @@
 
                             </td>
                         </tr>
-                            
-                        }
-                    </table>
+
+                    }
+                </table>
             </div>
         </div>
     </section>
-    
+
     <script src="~/JS/Index.js">
     </script>
 </body>
