--- a/Projeto_Final/HTMLCSS/Provas/listar_notas_prof.cshtml
+++ b/Projeto_Final/HTMLCSS/Provas/listar_notas_prof.cshtml
@@ -14,6 +14,11 @@
     {
         logado = true;
     }
+    else
+    {
+        <text>
+            <script>window.location.href = "/Index.cshtml";</script></text>
+    }
 
 }
 
@@ -35,71 +40,96 @@
     <link rel="stylesheet" href="~/HTMLCSS/CSS/Listagem.css" />
     <title>CENAI</title>
 </head>
-<body div class="bg">
+<body div class="bg" onload="poof()">
+    <input type="hidden" id="nivel_acesso" value="@cookie.Value.ToString()" />
     <section>
         <nav>
             <!--SIDEBAR-->
-            <div class="sidenav" onclick="Dropdownbtn()">
+            <div class="sidenav">
+
                 <!--PAGINA INICIAL-->
                 <a href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
                 <!--MATRICULA-->
-                <button class="dropdown-btn">
-                    <span class="material-symbols-outlined">person_add</span>
-                    Matricula
-                    <span class="material-symbols-outlined">expand_more</span>
-                </button>
-                <!--MATRICULA OPCOES-->
-                <div class="dropdown-container">
-                    <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
-                    <a href="~/HTMLCSS/Listagem/listagem_matriculas.cshtml">Alunos Matriculados</a>
+                <div id="sidenav-matricula" style="display:none;">
+                    <button class="dropdown-btn">
+                        <span class="material-symbols-outlined">person_add</span>
+                        Matricula
+                        <span class="material-symbols-outlined">expand_more</span>
+                    </button>
+                    <!--MATRICULA OPCOES-->
+                    <div class="dropdown-container">
+                        <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
+                        <a href="~/HTMLCSS/Listagem/listagem_matriculas.cshtml">Alunos Matriculados</a>
+                    </div>
                 </div>
                 <!--REGISTRO-->
-                <button class="dropdown-btn">
-                    <span class="material-symbols-outlined">app_registration</span>
-                    Registro
-                    <span class="material-symbols-outlined">expand_more</span>
-                </button>
-                <!--REGISTRO OPCOES-->
-                <div class="dropdown-container">
-                    <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
-                    <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
-                    <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
+                <div id="sidenav-registro" style="display:none;">
+                    <button class="dropdown-btn">
+                        <span class="material-symbols-outlined">app_registration</span>
+                        Registro
+                        <span class="material-symbols-outlined">expand_more</span>
+                    </button>
+                    <!--REGISTRO OPCOES-->
+                    <div class="dropdown-container">
+                        <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
+                        <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
+                        <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
+                    </div>
                 </div>
                 <!--LISTAGEM-->
-                <button class="dropdown-btn">
-                    <span class="material-symbols-outlined">list_alt</span>
-                    Listagem
-                    <span class="material-symbols-outlined">expand_more</span>
-                </button>
-                <!--LISTAGEM OPCOES-->
-                <div class="dropdown-container">
-                    <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
-                    <a class="active" href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
-                    <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
-                    <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
+                <div id="sidenav-listagem" style="display:none;">
+                    <button class="dropdown-btn">
+                        <span class="material-symbols-outlined">list_alt</span>
+                        Listagem
+                        <span class="material-symbols-outlined">expand_more</span>
+                    </button>
+                    <!--LISTAGEM OPCOES-->
+                    <div class="dropdown-container">
+                        <a href="~/HTMLTEMP/Checagem/check_listagem.cshtml">Usuarios</a>
+                        <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
+                        <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
+                        <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
+                    </div>
                 </div>
                 <!--PESQUISA-->
-                <button class="dropdown-btn">
-                    <span class="material-symbols-outlined">search</span>
-                    Pesquisa
-                    <span class="material-symbols-outlined">expand_more</span>
-                </button>
-                <!--PESQUISA OPCOES-->
-                <div class="dropdown-container">
-                    <a href="#">Usuarios</a>
-                    <a href="#">Turmas</a>
-                    <a href="#">Salas</a>
+                <div id="sidenav-pesquisa" style="display:none;">
+                    <button class="dropdown-btn">
+                        <span class="material-symbols-outlined">search</span>
+                        Pesquisa
+                        <span class="material-symbols-outlined">expand_more</span>
+                    </button>
+                    <!--PESQUISA OPCOES-->
+                    <div class="dropdown-container">
+                        <a href="#">Usuarios</a>
+                        <a href="#">Turmas</a>
+                        <a href="#">Salas</a>
+                    </div>
                 </div>
                 <!--PROVAS-->
-                <a href="#">
-                    <span class="material-symbols-outlined">quiz</span>
-                    Provas
-                </a>
+                <div id="sidenav-provas" style="display:none;">
+                    <button class="dropdown-btn">
+                        <span class="material-symbols-outlined">quiz</span>
+                        Provas
+                        <span class="material-symbols-outlined">expand_more</span>
+                    </button>
+                    <!--PESQUISA OPCOES-->
+                    <div class="dropdown-container">
+                        <a href="~/HTMLCSS/Provas/registrar_notas.cshtml">Dar Nota</a>
+                        <a class="active" href="~/HTMLCSS/Provas/listar_notas_prof.cshtml">Ver Notas</a>
+                    </div>
+                </div>
+                <!--NOTAS-->
+                <div id="sidenav-notas" style="display:none;">
+                    <a href="#">
+                        <span class="material-symbols-outlined">scoreboard</span>
+                        Suas Notas
+                    </a>
+                </div>
                 <!--AREA DO USUARIO-->
-                <a href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
+                <a href="~/HTMLCSS/UserArea/userarea.cshtml">
                     <span class="material-symbols-outlined">account_circle</span>
                     Área do Usuario
                 </a>
@@ -109,10 +139,12 @@
                     Fazer Logoff
                 </a>
             </div>
+
+
         </nav>
 
         <div class="content" id="content">
-            
+
             <div class="lista" id="lista">
                 <center>
                     <table>
@@ -127,36 +159,38 @@
                         @{List<prova> lista = Funcoes.Lista_Notas(Prova);}
                         @foreach (prova provas in lista)
                         {
-                        <tr>
-                            <td>@provas.idprova</td>
-                            <td>@provas.nota</td>
-                            <td>@provas.idmatricula</td>
-                            <td>@provas.idturma</td>
-                            <td>@provas.extra</td>
-                            <td><div class="options">
-                                    <form method="post" action="~/HTMLCSS/Provas/edit_notas.cshtml">
-                                        <input type="hidden" id="provaid" name="provaid" value="@provas.idprova" />
-                                        <button class="btn_edit">
-                                            <span class="glyphicon glyphicon-edit"></span> 
-                                        </button>
-                                    </form>
-                                    <form method="post" action="~/HTMLCSS/Provas/delete_nota.cshtml">
-                                        <input type="hidden" id="provaid" name="provaid" value="@provas.idprova" />
-                                        <button class="btn_remove">
-                                            <span class="glyphicon glyphicon-remove-circle"></span>
-                                        </button>
-                                    </form>
-                                </div></td>
-                        </tr>
-                            
+                            <tr>
+                                <td>@provas.idprova</td>
+                                <td>@provas.nota</td>
+                                <td>@provas.idmatricula</td>
+                                <td>@provas.idturma</td>
+                                <td>@provas.extra</td>
+                                <td>
+                                    <div class="options">
+                                        <form method="post" action="~/HTMLCSS/Provas/edit_notas.cshtml">
+                                            <input type="hidden" id="provaid" name="provaid" value="@provas.idprova" />
+                                            <button class="btn_edit">
+                                                <span class="glyphicon glyphicon-edit"></span>
+                                            </button>
+                                        </form>
+                                        <form method="post" action="~/HTMLCSS/Provas/delete_nota.cshtml">
+                                            <input type="hidden" id="provaid" name="provaid" value="@provas.idprova" />
+                                            <button class="btn_remove">
+                                                <span class="glyphicon glyphicon-remove-circle"></span>
+                                            </button>
+                                        </form>
+                                    </div>
+                                </td>
+                            </tr>
+
                         }
                     </table>
-                    
+
                 </center>
             </div>
         </div>
     </section>
-    
+
     <script src="~/JS/Index.js">
     </script>
 </body>
