--- a/Projeto_Final/HTMLCSS/Provas/registrar_notas.cshtml
+++ b/Projeto_Final/HTMLCSS/Provas/registrar_notas.cshtml
@@ -14,6 +14,11 @@
     {
         logado = true;
     }
+    else
+    {
+        <text>
+            <script>window.location.href = "/Index.cshtml";</script></text>
+    }
 }
 
 <!DOCTYPE html>
@@ -32,81 +37,109 @@
 
     <title>CENAI</title>
 </head>
-<body div class="bg">
-<section>
-    <nav>
-        <!--SIDEBAR-->
-        <div class="sidenav" onclick="Dropdownbtn()">
-            <!--PAGINA INICIAL-->
-            <a href="~/HTMLCSS/Main/main.cshtml">
-                <span class="material-symbols-outlined">home</span>
-                Pagina Inicial
-            </a>
-            <!--MATRICULA-->
-            <button class="dropdown-btn">
-                <span class="material-symbols-outlined">person_add</span>
-                Matricula
-                <span class="material-symbols-outlined">expand_more</span>
-            </button>
-            <!--MATRICULA OPCOES-->
-            <div class="dropdown-container">
-                <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
-                <a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml">Alunos Matriculados</a>
+<body div class="bg" onload="poof()">
+    <input type="hidden" id="nivel_acesso" value="@cookie.Value.ToString()" />
+    <section>
+        <nav>
+            <!--SIDEBAR-->
+            <div class="sidenav">
+
+                <!--PAGINA INICIAL-->
+                <a href="~/HTMLCSS/Main/main.cshtml">
+                    <span class="material-symbols-outlined">home</span>
+                    Pagina Inicial
+                </a>
+                <!--MATRICULA-->
+                <div id="sidenav-matricula" style="display:none;">
+                    <button class="dropdown-btn">
+                        <span class="material-symbols-outlined">person_add</span>
+                        Matricula
+                        <span class="material-symbols-outlined">expand_more</span>
+                    </button>
+                    <!--MATRICULA OPCOES-->
+                    <div class="dropdown-container">
+                        <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
+                        <a href="~/HTMLCSS/Listagem/listagem_matriculas.cshtml">Alunos Matriculados</a>
+                    </div>
+                </div>
+                <!--REGISTRO-->
+                <div id="sidenav-registro" style="display:none;">
+                    <button class="dropdown-btn">
+                        <span class="material-symbols-outlined">app_registration</span>
+                        Registro
+                        <span class="material-symbols-outlined">expand_more</span>
+                    </button>
+                    <!--REGISTRO OPCOES-->
+                    <div class="dropdown-container">
+                        <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
+                        <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
+                        <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
+                    </div>
+                </div>
+                <!--LISTAGEM-->
+                <div id="sidenav-listagem" style="display:none;">
+                    <button class="dropdown-btn">
+                        <span class="material-symbols-outlined">list_alt</span>
+                        Listagem
+                        <span class="material-symbols-outlined">expand_more</span>
+                    </button>
+                    <!--LISTAGEM OPCOES-->
+                    <div class="dropdown-container">
+                        <a href="~/HTMLTEMP/Checagem/check_listagem.cshtml">Usuarios</a>
+                        <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
+                        <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
+                        <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
+                    </div>
+                </div>
+                <!--PESQUISA-->
+                <div id="sidenav-pesquisa" style="display:none;">
+                    <button class="dropdown-btn">
+                        <span class="material-symbols-outlined">search</span>
+                        Pesquisa
+                        <span class="material-symbols-outlined">expand_more</span>
+                    </button>
+                    <!--PESQUISA OPCOES-->
+                    <div class="dropdown-container">
+                        <a href="#">Usuarios</a>
+                        <a href="#">Turmas</a>
+                        <a href="#">Salas</a>
+                    </div>
+                </div>
+                <!--PROVAS-->
+                <div id="sidenav-provas" style="display:none;">
+                    <button class="dropdown-btn">
+                        <span class="material-symbols-outlined">quiz</span>
+                        Provas
+                        <span class="material-symbols-outlined">expand_more</span>
+                    </button>
+                    <!--PESQUISA OPCOES-->
+                    <div class="dropdown-container">
+                        <a class="active" href="~/HTMLCSS/Provas/registrar_notas.cshtml">Dar Nota</a>
+                        <a href="~/HTMLCSS/Provas/listar_notas_prof.cshtml">Ver Notas</a>
+                    </div>
+                </div>
+                <!--NOTAS-->
+                <div id="sidenav-notas" style="display:none;">
+                    <a href="#">
+                        <span class="material-symbols-outlined">scoreboard</span>
+                        Suas Notas
+                    </a>
+                </div>
+                <!--AREA DO USUARIO-->
+                <a href="~/HTMLCSS/UserArea/userarea.cshtml">
+                    <span class="material-symbols-outlined">account_circle</span>
+                    Área do Usuario
+                </a>
+                <!--LOGOUT-->
+                <a class="logoff" onclick="LogOff()">
+                    <span class="material-symbols-outlined">logout</span>
+                    Fazer Logoff
+                </a>
             </div>
-            <!--REGISTRO-->
-            <button class="dropdown-btn">
-                <span class="material-symbols-outlined">app_registration</span>
-                Registro
-                <span class="material-symbols-outlined">expand_more</span>
-            </button>
-            <!--REGISTRO OPCOES-->
-            <div class="dropdown-container">
-                <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
-                <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
-                <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
-            </div>
-            <!--LISTAGEM-->
-            <button class="dropdown-btn">
-                <span class="material-symbols-outlined">list_alt</span>
-                Listagem
-                <span class="material-symbols-outlined">expand_more</span>
-            </button>
-            <!--LISTAGEM OPCOES-->
-            <div class="dropdown-container">
-                <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
-                <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
-                <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
-                <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
-            </div>
-            <!--PESQUISA-->
-            <button class="dropdown-btn">
-                <span class="material-symbols-outlined">search</span>
-                Pesquisa
-                <span class="material-symbols-outlined">expand_more</span>
-            </button>
-            <!--PESQUISA OPCOES-->
-            <div class="dropdown-container">
-                <a href="#">Usuarios</a>
-                <a href="#">Turmas</a>
-                <a href="#">Salas</a>
-            </div>
-            <!--PROVAS-->
-            <a href="#">
-                <span class="material-symbols-outlined">quiz</span>
-                Provas
-            </a>
-            <!--AREA DO USUARIO-->
-            <a href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
-                <span class="material-symbols-outlined">account_circle</span>
-                Área do Usuario
-            </a>
-            <!--LOGOUT-->
-            <a class="logoff" onclick="LogOff()">
-                <span class="material-symbols-outlined">logout</span>
-                Fazer Logoff
-            </a>
-        </div>
-    </nav>
+
+
+        </nav>
+        </nav>
         <main>
             <div class="content">
                 <form method="post" action="~/HTMLCSS/Provas/registrando_nota.cshtml">
@@ -114,7 +147,7 @@
                         <center>
                             <div class="registro">
 
-                                <input type="text" id="notaid" name="notaid" placeholder="Nota (/100)" maxlength="3" required /> 
+                                <input type="text" id="notaid" name="notaid" placeholder="Nota (/100)" maxlength="3" required />
 
                                 <select name="idmatricula" id="idmatricula">
                                     <option value="1" disabled selected>ESCOLHA O ALUNO</option>
@@ -123,8 +156,8 @@
                                     {
                                         <option value="@matri.idmatricula">@matri.idaluno || @matri.idturma</option>
                                     }
-                                    </select>
-                                
+                                </select>
+
                                 <!--ENVIAR-->
                                 <input type="submit" placeholder="DAR NOTA" /><br />
 
