--- a/Projeto_Final/HTMLCSS/Registro/registro.cshtml
+++ b/Projeto_Final/HTMLCSS/Registro/registro.cshtml
@@ -1,7 +1,21 @@
 ﻿@using Projeto_Final.CSHARP;
 @{
     BancoDeDados.DBConnect();
-    pessoa Pessoa = new pessoa();
+    Boolean logado = false;
+
+    HttpCookie cookie = Request.Cookies["UserLogin"];
+    HttpCookie cookiecpf = Request.Cookies["UserCPF"];
+
+    if (cookie != null)
+    {
+        logado = true;
+    }
+    else
+    {
+        <text>
+            <script>window.location.href = "/Index.cshtml";</script></text>
+    }
+
 }
 
 <!DOCTYPE html>
@@ -21,122 +35,122 @@
     <title>CENAI</title>
 </head>
 <body div class="bg">
-<section>
-    <nav>
-        <!--SIDEBAR-->
-        <div class="sidenav" onclick="Dropdownbtn()">
-            <!--PAGINA INICIAL-->
-            <a href="~/HTMLCSS/Main/main.cshtml">
-                <span class="material-symbols-outlined">home</span>
-                Pagina Inicial
-            </a>
-            <!--MATRICULA-->
-            <button class="dropdown-btn">
-                <span class="material-symbols-outlined">person_add</span>
-                Matricula
-                <span class="material-symbols-outlined">expand_more</span>
-            </button>
-            <!--MATRICULA OPCOES-->
-            <div class="dropdown-container">
-                <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
-                <a href="~/HTMLCSS/Listagem/listagem_matriculas.cshtml">Alunos Matriculados</a>
+    <section>
+        <nav>
+            <!--SIDEBAR-->
+            <div class="sidenav" onclick="Dropdownbtn()">
+                <!--PAGINA INICIAL-->
+                <a href="~/HTMLCSS/Main/main.cshtml">
+                    <span class="material-symbols-outlined">home</span>
+                    Pagina Inicial
+                </a>
+                <!--MATRICULA-->
+                <button class="dropdown-btn">
+                    <span class="material-symbols-outlined">person_add</span>
+                    Matricula
+                    <span class="material-symbols-outlined">expand_more</span>
+                </button>
+                <!--MATRICULA OPCOES-->
+                <div class="dropdown-container">
+                    <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
+                    <a href="~/HTMLCSS/Listagem/listagem_matriculas.cshtml">Alunos Matriculados</a>
+                </div>
+                <!--REGISTRO-->
+                <button class="dropdown-btn">
+                    <span class="material-symbols-outlined">app_registration</span>
+                    Registro
+                    <span class="material-symbols-outlined">expand_more</span>
+                </button>
+                <!--REGISTRO OPCOES-->
+                <div class="dropdown-container">
+                    <a class="active" href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
+                    <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
+                    <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
+                </div>
+                <!--LISTAGEM-->
+                <button class="dropdown-btn">
+                    <span class="material-symbols-outlined">list_alt</span>
+                    Listagem
+                    <span class="material-symbols-outlined">expand_more</span>
+                </button>
+                <!--LISTAGEM OPCOES-->
+                <div class="dropdown-container">
+                    <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
+                    <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
+                    <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
+                    <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
+                </div>
+                <!--PESQUISA-->
+                <button class="dropdown-btn">
+                    <span class="material-symbols-outlined">search</span>
+                    Pesquisa
+                    <span class="material-symbols-outlined">expand_more</span>
+                </button>
+                <!--PESQUISA OPCOES-->
+                <div class="dropdown-container">
+                    <a href="#">Usuarios</a>
+                    <a href="#">Turmas</a>
+                    <a href="#">Salas</a>
+                </div>
+                <!--PROVAS-->
+                <a href="#">
+                    <span class="material-symbols-outlined">quiz</span>
+                    Provas
+                </a>
+                <!--AREA DO USUARIO-->
+                <a href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
+                    <span class="material-symbols-outlined">account_circle</span>
+                    Área do Usuario
+                </a>
+                <!--LOGOUT-->
+                <a class="logoff" onclick="LogOff()">
+                    <span class="material-symbols-outlined">logout</span>
+                    Fazer Logoff
+                </a>
             </div>
-            <!--REGISTRO-->
-            <button class="dropdown-btn">
-                <span class="material-symbols-outlined">app_registration</span>
-                Registro
-                <span class="material-symbols-outlined">expand_more</span>
-            </button>
-            <!--REGISTRO OPCOES-->
-            <div class="dropdown-container">
-                <a class="active"  href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
-                <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
-                <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
-            </div>
-            <!--LISTAGEM-->
-            <button class="dropdown-btn">
-                <span class="material-symbols-outlined">list_alt</span>
-                Listagem
-                <span class="material-symbols-outlined">expand_more</span>
-            </button>
-            <!--LISTAGEM OPCOES-->
-            <div class="dropdown-container">
-                <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
-                <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
-                <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
-                <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
-            </div>
-            <!--PESQUISA-->
-            <button class="dropdown-btn">
-                <span class="material-symbols-outlined">search</span>
-                Pesquisa
-                <span class="material-symbols-outlined">expand_more</span>
-            </button>
-            <!--PESQUISA OPCOES-->
-            <div class="dropdown-container">
-                <a href="#">Usuarios</a>
-                <a href="#">Turmas</a>
-                <a href="#">Salas</a>
-            </div>
-            <!--PROVAS-->
-            <a href="#">
-                <span class="material-symbols-outlined">quiz</span>
-                Provas
-            </a>
-            <!--AREA DO USUARIO-->
-            <a href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
-                <span class="material-symbols-outlined">account_circle</span>
-                Área do Usuario
-            </a>
-            <!--LOGOUT-->
-            <a class="logoff" onclick="LogOff()">
-                <span class="material-symbols-outlined">logout</span>
-                Fazer Logoff
-            </a>
-        </div>
-    </nav>
+        </nav>
         <main>
             <div class="content">
                 <form method="post" onsubmit="return checkPassword(this);" action="~/HTMLCSS/Registro/registrando/registrando.cshtml">
                     <div class="container">
-                            <div class="registro">
-                                    <h6>
-                                        REGISTRO DE USUARIOS!
-                                    </h6>
-                                <!--NIVEL DE ACESSO-->
-                                <div class="nivel">
+                        <div class="registro">
+                            <h6>
+                                REGISTRO DE USUARIOS!
+                            </h6>
+                            <!--NIVEL DE ACESSO-->
+                            <div class="nivel">
 
-                                    <select name="nivacesso" id="nivacesso" required>
-                                        <option value="1" selected disabled>Nivel de Acesso</option>
-                                        <option value="usuario">Usuario</option>
-                                        <option value="professor">Professor</option>
-                                        <option value="administrador">Administrador</option>
-                                    </select><br />
-
-                                </div>
-                                <!--NOME-->
-                                <input type="text" name="nomeid" id="nomeid" class="campo_nome"
-                                       placeholder="Nome Completo" minlenght="3" maxlength="100" required /><br />
-                                <!--CPF-->
-                                <input type="text" name="cpfid" id="cpf" class="campo_cpf"
-                                       placeholder="Insira seu CPF(apenas numeros)" maxlength="11" required /><br />
-                                <!--EMAIL-->
-                                <input type="email" name="emailid" id="emailid" class="campo_email"
-                                       placeholder="xyz@gmail.com" maxlength="100" required /><br />
-                                <!--TELEFONE-->
-                                <input type="tel" name="telid" class="campo_tel"
-                                       placeholder="telefone/celular" minxlength="11"
-                                       maxlength="14" required /><br />
-                                <!--SENHA-->
-                                <input type="password" id="senhaid1" name="senhaid1" class="campo_senha1"
-                                       placeholder="senha" minlength="6" maxlength="16" required /><br />
-                                <input type="password" id="senhaid2" name="senhaid2" class="campo_senha2"
-                                       placeholder="verifique senha" minlength="6" maxlength="16" required /><br />
-
-                                <!--ENVIAR-->
-                                <input type="submit" placeholder="REGISTRAR" /><br />
+                                <select name="nivacesso" id="nivacesso" required>
+                                    <option value="1" selected disabled>Nivel de Acesso</option>
+                                    <option value="usuario">Usuario</option>
+                                    <option value="professor">Professor</option>
+                                    <option value="administrador">Administrador</option>
+                                </select><br />
 
                             </div>
+                            <!--NOME-->
+                            <input type="text" name="nomeid" id="nomeid" class="campo_nome"
+                                   placeholder="Nome Completo" minlenght="3" maxlength="100" required /><br />
+                            <!--CPF-->
+                            <input type="text" name="cpfid" id="cpf" class="campo_cpf"
+                                   placeholder="Insira seu CPF(apenas numeros)" maxlength="11" required /><br />
+                            <!--EMAIL-->
+                            <input type="email" name="emailid" id="emailid" class="campo_email"
+                                   placeholder="xyz@gmail.com" maxlength="100" required /><br />
+                            <!--TELEFONE-->
+                            <input type="tel" name="telid" class="campo_tel"
+                                   placeholder="telefone/celular" minxlength="11"
+                                   maxlength="14" required /><br />
+                            <!--SENHA-->
+                            <input type="password" id="senhaid1" name="senhaid1" class="campo_senha1"
+                                   placeholder="senha" minlength="6" maxlength="16" required /><br />
+                            <input type="password" id="senhaid2" name="senhaid2" class="campo_senha2"
+                                   placeholder="verifique senha" minlength="6" maxlength="16" required /><br />
+
+                            <!--ENVIAR-->
+                            <input type="submit" placeholder="REGISTRAR" /><br />
+
+                        </div>
                     </div>
                 </form>
             </div>
