--- a/Projeto_Final/HTMLCSS/Provas/listar_notas_aluno.cshtml
+++ b/Projeto_Final/HTMLCSS/Provas/listar_notas_aluno.cshtml
@@ -40,15 +40,14 @@
     <link rel="stylesheet" href="~/HTMLCSS/CSS/Listagem.css" />
     <title>CENAI</title>
 </head>
-<body div class="bg" onload="poof()">
-    <input type="hidden" id="nivel_acesso" value="@cookie.Value.ToString()" />
+<body div class="bg"  onload="poof()">
     <section>
         <nav>
+            <input type="hidden" id="nivel_acesso" value="@cookie.Value.ToString()" />
             <!--SIDEBAR-->
             <div class="sidenav">
-
                 <!--PAGINA INICIAL-->
-                <a href="~/HTMLCSS/Main/main.cshtml">
+                <a class="active" href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -94,20 +93,6 @@
                         <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
                     </div>
                 </div>
-                <!--PESQUISA-->
-                <div id="sidenav-pesquisa" style="display:none;">
-                    <button class="dropdown-btn">
-                        <span class="material-symbols-outlined">search</span>
-                        Pesquisa
-                        <span class="material-symbols-outlined">expand_more</span>
-                    </button>
-                    <!--PESQUISA OPCOES-->
-                    <div class="dropdown-container">
-                        <a href="#">Usuarios</a>
-                        <a href="#">Turmas</a>
-                        <a href="#">Salas</a>
-                    </div>
-                </div>
                 <!--PROVAS-->
                 <div id="sidenav-provas" style="display:none;">
                     <button class="dropdown-btn">
@@ -123,7 +108,7 @@
                 </div>
                 <!--NOTAS-->
                 <div id="sidenav-notas" style="display:none;">
-                    <a class="active" href="h">
+                    <a href="~/HTMLCSS/Provas/listar_notas_aluno.cshtml">
                         <span class="material-symbols-outlined">scoreboard</span>
                         Suas Notas
                     </a>
