--- a/Projeto_Final/HTMLCSS/UserArea/userarea.cshtml
+++ b/Projeto_Final/HTMLCSS/UserArea/userarea.cshtml
@@ -41,16 +41,14 @@
 
     <title>CENAI</title>
 </head>
-<body div class="bg" onload="poof();">
-    <input type="hidden" id="nivel_acesso" value="@cookie.Value.ToString()" />
+<body div class="bg"  onload="poof()">
     <section>
         <nav>
-
+            <input type="hidden" id="nivel_acesso" value="@cookie.Value.ToString()" />
             <!--SIDEBAR-->
             <div class="sidenav">
-
                 <!--PAGINA INICIAL-->
-                <a href="~/HTMLCSS/Main/main.cshtml">
+                <a class="active" href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -96,20 +94,6 @@
                         <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
                     </div>
                 </div>
-                <!--PESQUISA-->
-                <div id="sidenav-pesquisa" style="display:none;">
-                    <button class="dropdown-btn">
-                        <span class="material-symbols-outlined">search</span>
-                        Pesquisa
-                        <span class="material-symbols-outlined">expand_more</span>
-                    </button>
-                    <!--PESQUISA OPCOES-->
-                    <div class="dropdown-container">
-                        <a href="#">Usuarios</a>
-                        <a href="#">Turmas</a>
-                        <a href="#">Salas</a>
-                    </div>
-                </div>
                 <!--PROVAS-->
                 <div id="sidenav-provas" style="display:none;">
                     <button class="dropdown-btn">
@@ -125,13 +109,13 @@
                 </div>
                 <!--NOTAS-->
                 <div id="sidenav-notas" style="display:none;">
-                    <a href="#">
+                    <a href="~/HTMLCSS/Provas/listar_notas_aluno.cshtml">
                         <span class="material-symbols-outlined">scoreboard</span>
                         Suas Notas
                     </a>
                 </div>
                 <!--AREA DO USUARIO-->
-                <a class="active" href="~/HTMLCSS/UserArea/userarea.cshtml">
+                <a href="~/HTMLCSS/UserArea/userarea.cshtml">
                     <span class="material-symbols-outlined">account_circle</span>
                     Área do Usuario
                 </a>
@@ -141,6 +125,8 @@
                     Fazer Logoff
                 </a>
             </div>
+
+
         </nav>
 
         <main>
