--- a/Projeto_Final/HTMLCSS/Listagem/listagem_sala.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_sala.cshtml
@@ -142,7 +142,9 @@
                                         <form method="post" action="~/HTMLCSS/Listagem/remove/delete_sala.cshtml">
                                             <input type="hidden" id="salaid" name="salaid" value="@salas.idsala" />
                                             <button>
-                                                <span class="glyphicon glyphicon-remove-circle"></span>
+                                                <span class="material-symbols-outlined">
+                                                    delete
+                                                </span>
                                             </button>
                                         </form>
                                     </div>
