--- a/Projeto_Final/HTMLCSS/Listagem/listagem_setores.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_setores.cshtml
@@ -143,7 +143,9 @@
                                         <form method="post" action="~/HTMLCSS/Listagem/remove/delete_setor.cshtml">
                                             <input type="hidden" id="setorid" name="setorid" value="@setores.idsetor" />
                                             <button>
-                                                <span class="glyphicon glyphicon-remove-circle"></span>
+                                                <span class="material-symbols-outlined">
+                                                    delete
+                                                </span>
                                             </button>
                                         </form>
                                     </div>
