--- a/Projeto_Final/HTMLCSS/CSS/Listagem.css
+++ b/Projeto_Final/HTMLCSS/CSS/Listagem.css
@@ -16,6 +16,16 @@
     display: inline-flex;
 }
 
+    .options button {
+        border-radius: 10px;
+        border: none;
+        background: rgba(255, 255, 255, 0.13);
+    }
+
+    .options button:hover {
+        color: #f1f1f1;
+    }
+
 table {
     width: auto;
     overflow-x: auto;
@@ -66,3 +76,4 @@ th .dropdown-container {
     background: rgba(255, 255, 255, 0.13);
     border-radius: 8px;
 }
+
