--- a/Projeto_Final/HTMLCSS/Listagem/Listagem_Alunos.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/Listagem_Alunos.cshtml
@@ -159,14 +159,18 @@
                                     <form method="post" action="~/HTMLCSS/Listagem/edit_listagem/edit_list_user.cshtml">
                                         <input type="hidden" id="userid" name="userid" value="@listagemalunos.cpf" />
                                         <button class="btn_edit">
-                                            <span class="glyphicon glyphicon-edit"></span>
+                                            <span class="material-symbols-outlined">
+                                                edit_square
+                                            </span>
                                         </button>
                                     </form>
                                     <form method="post" action="~/HTMLCSS/Listagem/remove/delete_user.cshtml">
                                         <input type="hidden" id="userid" name="userid" value="@listagemalunos.cpf" />
 
                                         <button class="btn_remove">
-                                            <span class="glyphicon glyphicon-remove-circle"></span>
+                                            <span class="material-symbols-outlined">
+                                                delete
+                                            </span>
                                         </button>
                                     </form>
                                 </div>
